--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
             </div>
         </div>
     </section>
-<!--
-    <!-- Work/Portfolio Section -->
+<!---->
+    <!-- Work/Portfolio Section -->  <!--
     <section id="work" class="py-16 bg-white">
         <div class="container mx-auto px-4 max-w-6xl">
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">Projects That Grew</h2>
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">  -->
                 <!-- Project 1 -->
-                <div class="relative group rounded-lg overflow-hidden shadow-lg">
+<!--                <div class="relative group rounded-lg overflow-hidden shadow-lg">
                     <img src="https://placehold.co/600x400/15803d/ffffff?text=Eco+Wear" alt="Eco-friendly fashion brand campaign" class="w-full h-auto transform group-hover:scale-105 transition duration-500">
                     <div class="absolute inset-0 bg-green-800 bg-opacity-70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-500">
                         <div class="text-center text-white px-4">
@@ -140,9 +140,9 @@
                             <p class="text-sm mt-2">Brand Identity & Digital Campaign</p>
                         </div>
                     </div>
-                </div>
+                </div>    -->
                 <!-- Project 2 -->
-                <div class="relative group rounded-lg overflow-hidden shadow-lg">
+  <!--              <div class="relative group rounded-lg overflow-hidden shadow-lg">
                     <img src="https://placehold.co/600x400/1e40af/ffffff?text=Urban+Cafe" alt="Coffee shop rebranding project" class="w-full h-auto transform group-hover:scale-105 transition duration-500">
                     <div class="absolute inset-0 bg-blue-800 bg-opacity-70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-500">
                         <div class="text-center text-white px-4">
@@ -150,9 +150,9 @@
                             <p class="text-sm mt-2">Social Media Management</p>
                         </div>
                     </div>
-                </div>
+                </div>  -->
                 <!-- Project 3 -->
-                <div class="relative group rounded-lg overflow-hidden shadow-lg">
+<!--                <div class="relative group rounded-lg overflow-hidden shadow-lg">
                     <img src="https://placehold.co/600x400/9d174d/ffffff?text=FinTech+Solutions" alt="Financial technology company campaign" class="w-full h-auto transform group-hover:scale-105 transition duration-500">
                     <div class="absolute inset-0 bg-pink-800 bg-opacity-70 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-500">
                         <div class="text-center text-white px-4">
@@ -164,9 +164,9 @@
             </div>
         </div>
     </section>
-
+-->
     <!-- Contact Section -->
-    <section id="contact" class="py-16 bg-gray-50">
+<!--    <section id="contact" class="py-16 bg-gray-50">
         <div class="container mx-auto px-4 max-w-2xl">
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Ready to Bloom?</h2>
             <p class="text-center text-lg text-gray-600 mb-8">
